# ray-tracer-challenge

./: CMakeLists.txt  CMakeLists.txt.txt  LICENSE  README.md  ray_tracer.cpp
Containers/: Color.hpp  Matrix.hpp  Vector.hpp
Primitives/: Primitive.hpp  Sphere.hpp
RayTracer/: CMakeLists.txt  Canvas.hpp
RayTracer/Containers/: Color.hpp  Matrix.hpp  Vector.hpp
RayTracer/Core/: CMakeLists.txt  Canvas.hpp  DataTypes.hpp  Light.hpp  Material.hpp  MatrixUtils.hpp  Ray.hpp  RayTracer.cpp  RayTracer.h  shape.cpp  shape.h  worldscene.cpp  worldscene.h
RayTracer/GUI/: CMakeLists.txt
RayTracer/Lights/: CMakeLists.txt  point_light.cpp  point_light.h
RayTracer/Materials/: CMakeLists.txt
RayTracer/Shapes/: CMakeLists.txt  sphere.cpp  sphere.h
Samples/: clock_drawing_sample.cpp  projectile_gen_sample.cpp  sphere_rendering_sample.cpp
tests/: CMakeLists.txt  attributes.tests.cpp  canvas_functionality.tests.cpp  canvas_tests.cpp  color_container.tests.cpp  color_container_tests.cpp  lights.tests.cpp  matrix_container.tests.cpp  matrix_container_tests.cpp  matrix_utilities.tests.cpp  matrix_utilities_tests.cpp  ray_creation_test.cpp  ray_functionality.tests.cpp  ray_tracer.tests.cpp  sphere_prim_tests.cpp  sphere_shape.tests.cpp  vector3_container_tests.cpp  vector4_container_tests.cpp  vector_container.tests.cpp  vector_container_tests.cpp  world_scene.tests.cpp
